--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^12.11.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
